[project]
name = "asyncfix"
version = "0.8.3"
description = "AsyncIO FIX Protocol client for Python"
readme = "README.md"
authors = [{ name = "Alex Veden", email = "i@alexveden.com" }]
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 4 - Beta",
]
keywords = ["asyncio", "FIX", "protocol", "client", "server", "parser", "unit tests", "simplefix", "tester", "orders"]
requires-python = ">=3.8"

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "isort==5.12.0",
  "flake8==6.1.0",
  "black==23.7.0",
  "pre-commit",
  'pytest-asyncio',
]

[project.urls]
Homepage = "https://github.com/alexveden/asyncfix"


[tool.isort]
profile = "black"
extend_skip = ["__init__.py"]
